<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">MyWallpaper</string>
    <string name="action_settings">Settings</string>
    <string name="IPAddress">IP Address:</string>
    <string name="PortNumber">Port:</string>
    <string name="ip_address">XXX.XXX.XXX.XXX</string>
    <string name="port">XXXX</string>
    <string name="getContacts">Get Contacts</string>
    <string name="attack">Attack!</string>

</resources>