<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.mywallpaper.MainActivity"
    android:orientation="vertical">    

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom"
        android:orientation="horizontal" >
        
        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/IPAddress"
            android:textColor="@string/IPAddress" />
        
        <EditText
            android:id="@+id/ipAddress"
            android:layout_weight="3"
        	android:layout_width="0dp"
        	android:layout_height="wrap_content"
        	android:hint="@string/ip_address" />

    </LinearLayout>
    
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >
        
        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/PortNumber"
            android:textColor="@string/PortNumber" />
        
        <EditText 
            android:id="@+id/port"
            android:layout_weight="3"
        	android:layout_width="0dp"
        	android:layout_height="wrap_content"
        	android:hint="@string/port" />

    </LinearLayout>
    
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" 
        android:orientation="horizontal" >
        
        <Button 
            android:layout_weight="1"
	        android:layout_width="0dp"
	        android:layout_height="wrap_content"
	        android:text="@string/getContacts"
	        android:onClick="getContacts" />
        
        <Button 
            android:layout_weight="1"
  	        android:layout_width="0dp"
	        android:layout_height="wrap_content"
	        android:text="@string/attack"
	        android:onClick="attackByIP" />
        
    </LinearLayout>


</LinearLayout>
